Image Loading Fix

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
 	<title>Alpha Knights Logistics Webpage</title>
-	<link rel="icon" href="favicon.ico">
+	<link rel="icon" href="/favicon.ico">
 	<link rel="stylesheet" href="./main.css">
 	<meta charset="UTF-8">
 </head>
-<img id="tf2" src="coconut.jpg" style="width: 25px;">
+<img id="tf2" src="/coconut.jpg" style="width: 25px;">
 <form id="main">
 	<label for="name">Material Name <span class="required">*</span></label>
 	<input type="text" id="name" name="name" required autofocus />
